**************
NSCA Changelog
**************

x.x.x - xxxx-xx-xx
------------------
- Changed release date to ISO format (yyyy-mm-dd) (John Frickson)


2.9.2 - 2016-12-07
------------------
- Renamed configure.in to configure.ac and added check for sigaction (John Frickson)
- Replaced all instances of signal() with sigaction() + blocking (John Frickson)
- Race condition when opening command file (mvela / John Frickson)
- Fix missing argument in open calls (Xavier Bachelot / John Frickson)
- NSCA close/POLLNVAL/accept bug causes hang (mib / John Frickson)


2.9.1 - 01/27/2012
------------------
- Applied patch to allow packets arriving with a future time stamp (Daniel Wittenberg)
- Updated server (nsca) to allow packets with older, smaller packet size (Eric Stanley)


2.9 - 11/04/2011
----------------
- Add config directive to submit directly to checkresults directory (Mike Lindsey)
- Support multi-line check output with 4000 character limit (Mike Lindsey)


2.8 - ??/??/????
----------------
- Added --with-log-facility option to control syslog logging (Ryan Ordway and Brian Seklecki)
- Fixed bug where daemon would segfault if mcrypt library was not initialized before timeout (Holger Weiss)
- Fixed bug with switching from dump file to command file when running under single mode (Ton Voon)
- Fix for small memory leak with running as a single process daemon (Daniel)


2.7.2 - 07/03/2007
------------------
- Fixed bug with NSCA daemon eating CPU if child process couldn't accept a connection in multi-process mode (Chris Wilson)


2.7.1 - 01/29/2007
------------------
- Fixed bug that prevented single mode daemon from working properly
- Added sample scripts for testing functionality to nsca_tests/ (Ton Voon/Altinity)


2.7 - 12/13/2006
----------------
- Fixed crash from malformed command line
- Updated to config.sub and config.guess to latest from GNU Savannah


2.6 - 04/06/2006
----------------
- Spec file fix
- Segfault fix in encryption library cleanup