@@ -40,40 +40,6 @@ static unsigned long crc32_table[256];
 static volatile sig_atomic_t mcrypt_initialized=FALSE;
 #endif
 
-/* escapes newlines in a string, snagged from nagios-3.0.6/base/utils.c */
-char *escape_newlines(char *rawbuf){
-        char *newbuf=NULL;
-        register int x,y;
-
-        if(rawbuf==NULL)
-                return NULL;
-
-        /* allocate enough memory to escape all chars if necessary */
-        if((newbuf=malloc((strlen(rawbuf)*2)+1))==NULL)
-                return NULL;
-
-        for(x=0,y=0;rawbuf[x]!=(char)'\x0';x++){
-
-                /* escape backslashes */
-                if(rawbuf[x]=='\\'){
-                        newbuf[y++]='\\';
-                        newbuf[y++]='\\';
-                        }
-
-                /* escape newlines */
-                else if(rawbuf[x]=='\n'){
-                        newbuf[y++]='\\';
-                        newbuf[y++]='n';
-                        }
-
-                else
-                        newbuf[y++]=rawbuf[x];
-                }
-        newbuf[y]='\x0';
-
-        return newbuf;
-        }
-
 /* build the crc table - must be called before calculating the crc value */
 void generate_crc32_table(void){
 	unsigned long crc, poly;
